assets/custom-styles.css
/* ... */
#filter-layout3-filter-layout3 .js-heightAnimation{
  height: 540px;
  transition: height 0.3s ease-out;
}

#filter-layout3-filter-layout3 .js-heightAnimation.transitioning{
  overflow: hidden !important;
}

#filter-layout3-filter-layout3 .js-heightAnimation.expanded{
  overflow: visible;
  height: 1000px;
}

#filter-layout3-filter-layout3 .filter-entry {
  position: relative;
  /* z-index: 2; */
  height: 990px;
}

@media only screen and (min-width: 1024px) {
  #filter-layout3-filter-layout3 .js-heightAnimation{
    height: 120px;
  }
  #filter-layout3-filter-layout3 .js-heightAnimation.expanded{
    height: 240px;
  }
  #filter-layout3-filter-layout3 .filter-entry {
    height: 240px;
  }
  #filter-layout3-filter-layout3 .js-heightAnimation .filter-entry .btn-search ~ div {
    z-index: 3;
  }
}

#filter-layout3-filter-layout3 .js-heightAnimation .filter-entry .btn-search ~ div {
  pointer-events: none;
}

#filter-layout3-filter-layout3 .js-heightAnimation:not(.expanded) .filter-entry .btn-search ~ div {
  pointer-events: none;
  opacity: 0;
}

#filter-layout3-filter-layout3 .js-heightAnimation.expanded .filter-entry .btn-search ~ div {
  opacity: 100%;
  pointer-events: all;
}




@media only screen and (min-width: 1024px) {
  #filter-layout3-filter-layout3 > .filter-entry {
    /* height: 120px; */
    transition: height 0.3s ease-out;
    row-gap: 2px;
    position: relative;
  }
}
.ymc-smart-filter-container .filter-layout3 .filter-entry {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  grid-template-rows: repeat(11, minmax(0, 1fr));
}
@media only screen and (min-width: 1024px) {
  .ymc-smart-filter-container .filter-layout3 .filter-entry {
    display: grid;
    grid-template-columns: repeat(7, minmax(0, 1fr));
    grid-template-rows: repeat(2, minmax(0, 1fr));
  }
}
.ymc-smart-filter-container .filter-layout3 .dropdown-filter {
  max-width: 100%!important;
}
.filter-layout3-148 > .filter-entry{
  margin-bottom: 40px;
  transition: height 0.3s ease-out;
}

.post-entry.post-custom-layout.post-custom-layout-148.post-custom-layout-148-2,
.post-entry.post-custom-layout.post-custom-layout-148.post-custom-layout-148-3{
  background-color: white;
}
.filter-layout3-148{
  padding-top: 10px;
}
.ymc-smart-filter-container .filter-layout3 .posts-found{
  margin-bottom: 0;
}
.custom-posts-found{
  top: 120px;
  gap: 6px;
  transition: all 0.3s ease;
}
@media only screen and (max-width: 1024px) {
  .custom-posts-found{
    top: 540px;
    gap: 6px;
    transition: all 0.3s ease;
  }
}
.ymc-smart-filter-container .filter-layout3 .posts-found:empty {
  display: block;
}
.dropdown-filter{
  margin: 0;
  width: 100%;
  height: 120px;
  color: #2E384D!important;
  align-items: flex-start!important;
  /* max-width: 167px!important; */
  align-self: flex-start;
  border-right: 2px solid#ebeef2;
  border-bottom: 2px solid#ebeef2;
  /* z-index: 1; */
}
@media only screen and (max-width: 1024px) {
  .dropdown-filter{
    margin: 0;
    width: 100%;
    height: 80px;
    color: #2E384D!important;
    align-items: flex-start!important;
    /* max-width: 167px!important; */
    align-self: flex-start;
    border-right: 2px solid#ebeef2;
    border-bottom: 2px solid#ebeef2;
    /* z-index: 1; */
  }
}

.dropdown-filter.customPrice{
  height: 120px;
  align-self: flex-start!important;
}
@media only screen and (max-width: 1024px) {
  .dropdown-filter.customPrice{
    height: 80px;
    align-self: flex-start!important;
  }
}
.dropdown-filter > .menu-active{
  border: none!important;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0px!important;
  overflow-y: hidden;
}
@media only screen and (max-width: 1024px) {
  .dropdown-filter > .menu-active{
    border: none!important;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0px!important;
    overflow-y: hidden;
  }
}
.active_window{
  padding: 10px 15px!important;
}

.menu-passive{
  background-color: white!important;
  color: #2E384D!important;
  font-size: 18px!important;
  padding: 0!important;
  z-index: 4!important;
  display: block;
  /* max-height: 180px; */
  max-height: 300px;
  max-width: 300px;
  overflow-y: scroll;
  box-shadow: 0 10px 40px 0 rgba(0,0,0,.1);
}
@media only screen and (max-width: 1024px) {
  .menu-passive{
    background-color: white!important;
    color: #2E384D!important;
    font-size: 18px!important;
    padding: 0!important;
    z-index: 4!important;
    display: block;
    /* max-height: 180px; */
    max-height: 300px;
    max-width: 100%!important;
    overflow-y: scroll;
    box-shadow: 0 10px 40px 0 rgba(0,0,0,.1);
  }
}
.menu-link{
  color: #2E384D!important;
  font-size: 18px!important;
  width: 100%;
  height: 100%;
  padding-left: 20px!important;
}
.ymc-smart-filter-container .filter-layout3 .dropdown-filter .menu-active .arrow {
border-color: #8a8f99!important;
border-width: 0 2px 2px 0;
}
.ymc-smart-filter-container .filter-layout3 .dropdown-filter{
  border-radius: 0!important;
  margin-bottom: 0!important;
}
.btn-more.dropdown-filter{
  margin-top: 2px;
}

/* .menu-link::before,
.menu-link::after, */
.arrow::before,
.arrow::after,
.menu-passive::before{
  content: none!important;
}
.menu-link::before{
  content: none!important;
}
.menu-link::after{
  border-left: 3px solid #b22944!important;
  border-bottom: 3px solid #b22944!important;
}
.count{
  display: none!important;
}
.menu-passive__item:hover{
  background-color: #B2F1FF;
  /* cursor: pointer; */
}
.ymc-smart-filter-container .filter-layout3 .dropdown-filter .menu-passive {
  top: 100px!important;
}

@media only screen and (max-width: 1024px) {
  .ymc-smart-filter-container .filter-layout3 .dropdown-filter .menu-passive {
    top: 80px!important;
  }
}
.menu-passive__item .active{
  padding: 12px 0px 12px 25px!important;
}
.menu-passive__item{
  padding: 0px!important;
}
.menu-passive__item a{
  padding: 12px 0px 12px 25px!important;
}
/* ... */

